# QuranBot

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG_MIGRATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  CURSOR_CONTEXT.md  DEPLOYMENT.md  Dockerfile  INSTALLATION.md  LICENSE  LOGGING_IMPROVEMENTS.md  Makefile  PERFORMANCE_MONITORING_SUMMARY.md  PERFORMANCE_PROFILING.md  POETRY_SETUP.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SECURITY_NOTICE.md  SECURITY_SETUP.md  SETUP.md  SUPPORT.md  WEBHOOK_MONITORING_SUMMARY.md  WEBHOOK_SETUP_GUIDE.md  announcement.txt  bot_aliases.sh  bot_manager.py  bot_state.json  com.quranbot.logsync.plist  control_panel.py  create_release.sh  demo_rich_visualizations.py  deploy_enhanced_auto_recovery.sh  env_template.txt  exclude.txt  fix_quiz_corruption.py  main.py  (+23 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  REPOSITORY_INFO.md  SECURITY.md  SUPPORT.md  dependabot.yml  discussions.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml  islamic-content.yml  support.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  islamic_content.md
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  community.yml  release.yml  test.yml
app/: bot.py  bot.py.backup  version.py
app/commands/: __init__.py  command_handler.py  question.py
app/config/: __init__.py  config.py  timezone.py
app/core/: __init__.py  container.py  errors.py  logger.py  process_lock.py  validation.py
app/data/: __init__.py  islamic_knowledge.json  knowledge.py  models.py  project_info.json  surahs_data.py
app/handlers/: __init__.py  mention_handler.py
app/services/: __init__.py
app/ui/: __init__.py
backup/: bot_stats.json  listening_stats.json  playback_state.json
backup/7_6 - 10PM/: bot_stats.json  playback_state.json
config/: .env.example  pyproject.toml
dashboard/: .env.example  README.md  app.py  config.py  quranbot-dashboard.service  requirements.txt  run_dashboard.py  start_dashboard.sh
dashboard/deploy/: README.md  deploy.sh  nginx.conf  quranbot-dashboard.service  start_dashboard.sh
data/: bilingual_quiz_questions.json  bot_state.json  complete_quiz_questions.json  custom_surah_mapping.json  daily_verses_pool.json  daily_verses_queue.json  daily_verses_state.json  discord_api_monitor.json  expanded_daily_verses.json  expanded_quiz_questions.json  knowledge.json  mecca_prayer_cache.json  quiz.json  quiz_expanded.json  quiz_state.json  quran_questions.json  rich_presence_state.json  syrian_knowledge.json  user_vc_sessions.json  verses.json
data/databases/: quranbot.db-shm  quranbot.db-wal
data/state/: bot_state.json  bot_state_backup.json  presence.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTOMATED_LOG_SYNC.md  CHANGELOG.md  COMPREHENSIVE_PROJECT_REVIEW.md  CONFIG_MIGRATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DEV_SETUP.md  DISCORD_API_MONITORING.md  ENVIRONMENT_SETUP.md  EXAMPLES.md  FEATURE_SHOWCASE.md  INSTALLATION.md  MODERNIZATION_SUMMARY.md  POETRY_SETUP.md  README.md  RELEASE_NOTES_3.0.0.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  SECURITY_NOTICE.md  SERVICE_ARCHITECTURE.md  STATE_SERVICE_MODERNIZATION.md  STYLE_GUIDE.md  TROUBLESHOOTING.md  VERSION_MANAGEMENT.md  VPS_MANAGEMENT.md  WEBHOOK_LOGGER_GUIDE.md
docs/api/: README.md  error-codes.md  integration-guide.md  openapi.yaml  postman-collection.json  usage-examples.md
examples/: unified_config_usage.py
examples/advanced-config/: README.md
examples/basic-setup/: .env.example  README.md  docker-compose.yml
performance_data/: performance_20250725_125343.json  performance_20250726_002246.json  performance_20250726_002318.json  performance_20250726_002923.json  performance_20250726_003949.json  performance_20250726_004100.json  performance_20250726_013156.json
scripts/: quranbot_manager.bat  run_dev.sh  validate_config.py  validate_islamic_content.py
scripts/linux/: check_and_update_ffmpeg.sh  validate_mp3s_with_ffmpeg.sh
scripts/local/: audio_validator.py  backup_manager.py  ffmpeg_checker.py
scripts/macos/: check_and_update_ffmpeg.sh
scripts/vps/: README.md  README_ENHANCED.md  logs_bot.sh  restart_bot.sh  status_bot.sh  stop_bot.sh  vps_config.json  vps_config.json.template  vps_manager.bat  vps_manager.ps1  vps_manager.py  vps_manager_advanced.py  vps_manager_enhanced.bat
src/: README.md  __init__.py  run.py  version.py
src/bot/: __init__.py  (+3 more)
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_audio_manager.py  test_audio_service.py  test_bot.py  test_config.py  test_config_simple.py  test_control_panel.py  test_core_config.py  test_core_errors.py  test_core_logging.py  test_core_services.py  test_daily_questions.py  test_daily_verses.py  test_di_container.py  test_exceptions.py  test_imports.py  test_integration.py  test_integration_comprehensive.py  test_listening_stats.py  test_modernized_bot.py  test_performance.py  test_quiz_manager.py  test_rich_presence.py  test_runner.py  test_security.py  test_security_comprehensive.py  test_services_base.py  test_state_manager.py  test_state_service.py  test_structured_logger.py  test_surah_mapper.py  test_tree_log.py  test_utils.py  test_webhook_logger.py
tools/: README_VALIDATION.md  audio_recovery_control.py  bottleneck_analyzer.py  cleanup_old_backups.py  create_missing_releases.py  deploy_to_vps.py  format_code.py  install_macos_service.sh  interval_monitor.py  json_health_check.py  log_sync_daemon.py  log_sync_status.json  migrate_config.py  performance_monitor.py  pre_commit_validation.py  qb_aliases.sh  quiz_manager.py  set_quiz_interval.py  simple_interval_test.py  test_ai_mention_system.py  test_bot.py  test_discord_api_monitor.py  test_enhanced_prayer_system.py  test_islamic_ai.py  test_monitoring.py  test_prayer_notification.py  test_webhook_alerts.py  update_readme.py  update_version.py  validate_and_start.py  validate_bot_startup.py  vps_restart_test.py  web_dashboard.py
vps/: VPS_CONFIG_TEMPLATE.md
web/: app.py  deploy.sh
(+313 files in other folders)
