[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert statements in tests

[tool.bandit.assert_used]
skips = ["*/test_*.py"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
